crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__func__sequence_type_mismatch_from_func_params.snap
---
source: crates/service/tests/diagnostics/typeck/func.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 8,
          "character": 8
        },
        "end": {
          "line": 8,
          "character": 18
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [f32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 6,
                "character": 8
              },
              "end": {
                "line": 6,
                "character": 19
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 8
        },
        "end": {
          "line": 14,
          "character": 14
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f64], found [i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 13,
                "character": 8
              },
              "end": {
                "line": 13,
                "character": 19
              }
            }
          },
          "message": "expected type `f64`, found `i32`"
        }
      ]
    }
  ]
}
